[package]
name = "rewrite"
version = "0.2.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
description = "Safely rewrite file contents from stdin, even when file is input"
homepage = "https://github.com/neosmart/rewrite"
repository = "https://github.com/neosmart/rewrite"
readme = "readme.md"
keywords = ["rewrite", "redirect", "in-place"]
categories = ["command-line-utilities", "text-processing", "os"]
license = "MIT"

[dependencies]
uuid = { version = "0.3", features = ["v4"] }
getopts = "0.2"
